--- a/client/package.json
+++ b/client/package.json
@@ -7,8 +7,9 @@
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.7.3",
     "react": "^17.0.1",
+    "react-card-flip": "^1.1.0",
     "react-dom": "^17.0.1",
-    "react-lineto": "^3.2.0",
+    "react-lineto": "^3.0.0",
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
