--- a/server/package.json
+++ b/server/package.json
@@ -1,10 +1,13 @@
 {
   "dependencies": {
+    "@dropb/ffprobe": "^2.0.0",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "events": "^3.3.0",
     "express": "^4.17.1",
+    "ffprobe": "^1.1.2",
     "fs": "*",
+    "music-metadata": "^7.8.1",
     "stream": "^0.0.2",
     "throttle": "^1.0.3"
   }
