--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
     "react": "^17.0.1",
     "react-card-flip": "^1.1.0",
     "react-dom": "^17.0.1",
+    "react-h5-audio-player": "^3.6.2",
     "react-lineto": "^3.0.0",
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
