--- a/server/package.json
+++ b/server/package.json
@@ -16,6 +16,7 @@
     "lame": "^1.2.4",
     "music-metadata": "^7.8.1",
     "pez": "^4.0.5",
+    "pg-promise": "^10.9.5",
     "speaker": "^0.5.3",
     "stream": "^0.0.2",
     "throttle": "^1.0.3",
