--- a/server/package.json
+++ b/server/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "@dropb/ffprobe": "^2.0.0",
     "body-parser": "^1.19.0",
+    "boom": "^7.3.0",
     "bourne": "^1.1.2",
     "content": "^4.0.6",
     "cors": "^2.8.5",
