--- a/server/package.json
+++ b/server/package.json
@@ -22,6 +22,7 @@
     "stream": "^0.0.2",
     "throttle": "^1.0.3",
     "throttle-stream": "^0.0.8",
+    "uuid": "^8.3.2",
     "wreck": "^14.2.0"
   }
 }
