--- a/server/package.json
+++ b/server/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "@dropb/ffprobe": "^2.0.0",
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "boom": "^7.3.0",
     "bourne": "^1.1.2",
@@ -14,10 +15,12 @@
     "hapi": "^18.1.0",
     "inert": "^5.1.3",
     "iron": "^5.0.6",
+    "jsonwebtoken": "^8.5.1",
     "lame": "^1.2.4",
     "music-metadata": "^7.8.1",
     "pez": "^4.0.5",
     "pg-promise": "^10.9.5",
+    "redis": "^3.1.2",
     "speaker": "^0.5.3",
     "stream": "^0.0.2",
     "throttle": "^1.0.3",
