--- a/server/package.json
+++ b/server/package.json
@@ -8,6 +8,7 @@
     "content": "^4.0.6",
     "cors": "^2.8.5",
     "cryptiles": "^4.1.3",
+    "dotenv": "^8.2.0",
     "events": "^3.3.0",
     "express": "^4.17.1",
     "ffprobe": "^1.1.2",
