--- a/server/package.json
+++ b/server/package.json
@@ -15,6 +15,7 @@
     "ffprobe": "^1.1.2",
     "fs": "*",
     "hapi": "^18.1.0",
+    "hapi-i18n": "^3.0.1",
     "inert": "^5.1.3",
     "iron": "^5.0.6",
     "jsonwebtoken": "^8.5.1",
