--- a/client/package.json
+++ b/client/package.json
@@ -7,14 +7,14 @@
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.7.3",
-    "react": "^17.0.1",
+    "react": "^17.0.2",
     "react-card-flip": "^1.1.0",
-    "react-dom": "^17.0.1",
+    "react-dom": "^17.0.2",
     "react-h5-audio-player": "^3.6.2",
     "react-lineto": "^3.0.0",
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.3",
+    "react-scripts": "^4.0.3",
     "redux": "^4.0.5",
     "redux-logger": "^3.0.6",
     "redux-persist": "^6.0.0",
