--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.7.3",
     "make-plural": "^6.2.2",
+    "music-metadata-browser": "^2.2.6",
     "react": "^17.0.2",
     "react-card-flip": "^1.1.0",
     "react-dom": "^17.0.2",
