updated project description

--- a/client/public/manifest.json
+++ b/client/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Liminal",
-  "name": "Project_Liminal",
+  "short_name": "Project_Liminal",
+  "name": "Project Liminal - music streaming",
   "icons": [
     {
       "src": "favicon.ico",
